@@ -142,14 +142,18 @@ NSString* GSWHTTPHeader_RecordingIDsCookie[2]={ @"x-gsweb-ids-url", @"x-webobjec
 NSString* GSWHTTPHeader_RecordingApplicationNumber[2]={ @"x-gsweb-application-number", @"x-webobjects-application-number" };
 NSString* GSWHTTPHeader_LoadAverage    = @"x-webobjects-loadaverage";
 NSString* GSWHTTPHeader_RefuseSessions = @"x-webobjects-refusenewsessions";
+NSString* GSWHTTPHeader_RefusingRedirection[2] = { @"x-gsweb-refusing-redirection", @"x-webobjects-refusing-redirection" };
 NSString* GSWHTTPHeader_AdaptorStats[2] = { @"x-gsweb-adaptorstats", @"x-webobjects-adaptorstats" };
 
 NSString* GSWHTTPHeader_MethodPost=@"POST";
 NSString* GSWHTTPHeader_MethodGet=@"GET";
 NSString* GSWHTTPHeader_AcceptLanguage=@"Accept-Language";
 NSString* GSWHTTPHeader_AcceptEncoding=@"Accept-Encoding";
+NSString* GSWHTTPHeader_ContentDisposition=@"Content-Disposition";
+NSString* GSWHTTPHeader_ContentEncoding=@"Content-Encoding";
 NSString* GSWHTTPHeader_ContentType=@"Content-Type";
 NSString* GSWHTTPHeader_FormURLEncoded=@"application/x-www-form-urlencoded";
+NSString* GSWHTTPHeader_Location=@"Location";
 NSString* GSWHTTPHeader_MultipartFormData=@"multipart/form-data";
 NSString* GSWHTTPHeader_MimeType_TextPlain=@"text/plain";
 NSString* GSWHTTPHeader_UserAgent=@"User-Agent";
